Fixed overflow for particles

--- a/styles.css
+++ b/styles.css
@@ -78,21 +78,25 @@ h1.gradient-text {
 }
 
 h1.gradient-text:hover {
-	opacity: 0.7;
-	text-shadow: rgba(255, 255, 255, 0.466) 0px 0px 0px;
+	opacity: 1;
 }
 
 @media (hover: none) {
 	h1.gradient-text:active {
 		opacity: 1;
-		text-shadow: rgba(255, 255, 255, 0.466) 0px 0px 0px;
 	}
 }
 
 hr {
+	transition: 0.6s;
 	border: 0;
 	height: 3px;
-	background-color: #b1b1b129;
+	background-color: rgba(177, 177, 177, 0.18);
+}
+
+hr:hover {
+	background-color: rgba(255, 255, 255, 0.337);
+	transition: 0.6s;
 }
 
 @keyframes gradient {
@@ -109,87 +113,14 @@ hr {
 	}
 }
 
-/*
-.cube {
-	position: absolute;
-	top: 80vh;
-	left: 45vw;
-	width: 10px;
-	height: 10px;
-	transform-origin: top left;
-	overflow: hidden;
-	transform: scale(0) rotate(0deg) translate(-50%, -50%);
-	-webkit-animation: cube 12s ease-in forwards infinite;
-	animation: cube 12s ease-in forwards infinite;
-}
-
-.cube:nth-child(2) {
-	-webkit-animation-delay: 2s;
-	animation-delay: 2s;
-	left: 25vw;
-	top: 40vh;
-}
-
-.cube:nth-child(3) {
-	-webkit-animation-delay: 4s;
-	animation-delay: 4s;
-	left: 75vw;
-	top: 50vh;
-}
-
-.cube:nth-child(4) {
-	-webkit-animation-delay: 6s;
-	animation-delay: 6s;
-	left: 90vw;
-	top: 10vh;
-}
-
-.cube:nth-child(5) {
-	-webkit-animation-delay: 8s;
-	animation-delay: 8s;
-	left: 10vw;
-	top: 85vh;
-}
-
-.cube:nth-child(6) {
-	-webkit-animation-delay: 10s;
-	animation-delay: 10s;
-	left: 50vw;
-	top: 10vh;
-}
-
-@-webkit-keyframes cube {
-	from {
-		transform: scale(0) rotate(0deg) translate(-50%, -50%);
-		opacity: 1;
-	}
-
-	to {
-		transform: scale(20) rotate(960deg) translate(-50%, -50%);
-		opacity: 0;
-	}
-}
-
-@keyframes cube {
-	from {
-		transform: scale(0) rotate(0deg) translate(-50%, -50%);
-		opacity: 1;
-	}
-
-	to {
-		transform: scale(20) rotate(960deg) translate(-50%, -50%);
-		opacity: 0;
-	}
-}
-*/
-
 .ball {
 	position: absolute;
 	border-radius: 50%;
-	opacity: 0.7;
+	opacity: 0.4;
 	transition: 0.5s;
-	-moz-filter: blur(1px) brightness(1.3) saturate(120%);
-	filter: blur(1px) brightness(1.3) saturate(120%);
+	-moz-filter: brightness(1.3) saturate(120%);
+	filter: saturate(120%);
+	pointer-events: none;
 }
 
 a {
